# argus

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.argus/: config.yml  config.yml.example
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: argus.yml  ci.yml  release-tag.yml
docs/: writing-a-lens.md
eval/: run_eval.py
eval/seed_bugs/001-missing-null-check/: diff.patch  expected.yml
eval/seed_bugs/002-sql-injection-risk/: diff.patch  expected.yml
eval/seed_bugs/003-premature-guard-flag/: diff.patch  expected.yml
eval/seed_bugs/004-sequence-counter-and-typo/: diff.patch  expected.yml
scripts/: check_readme_version.py
src/argus/: cli.py  config.py  fingerprint.py  github_app.py  pipeline.py  report.py
src/argus/context/: __init__.py  budget.py  gather.py
src/argus/curator/: __init__.py  curate.py  evidence.py
src/argus/lenses/: __init__.py  base.py  loader.py
src/argus/lenses/builtin/: contracts.md  correctness.md  deleted_code.md  efficiency.md  error_handling.md  reuse.md  security.md  tests.md
src/argus/models/: __init__.py  client.py
src/argus/posting/: __init__.py  github.py  shadow.py
tests/: test_budget.py  test_cli.py  test_client.py  test_config.py  test_curate.py  test_curate_dedupe.py  test_evidence.py  test_gather.py  test_github_app.py  test_lens_loader.py  test_pipeline.py  test_posting.py  test_report.py  test_run_eval.py
