[project]
name = "argus-review"
version = "0.2.0"
description = "An open source AI PR reviewer built from many narrow lenses and one careful curator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sibin Sunimol" }]
dependencies = [
    "anthropic>=0.40.0",
    "PyGithub>=2.3.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
]

[project.scripts]
argus = "argus.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
