[project]
name = "argus-review"
version = "1.0.0"
description = "An open source AI PR reviewer built from many narrow lenses and one careful curator"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sibin Sunimol" }]
dependencies = [
    "anthropic>=0.40.0",
    "PyGithub>=2.3.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
]

[project.scripts]
argus = "argus.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
